# salty

./: .gitignore  main.py  pyproject.toml  scratchpad.py
salty/: __init__.py  audio_bridge.py  main.py  movement_manager.py  realtime.py  speech_movements.py  tool.py
