[project]
name = "reachy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastrtc>=0.0.34",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "reachy-mini[gstreamer]>=1.2.8",
    "scipy>=1.16.3",
]
